--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-picker/picker": "^2.8.1",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
-    "expo-font": "~12.0.9",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "marcados": "file:",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
@@ -37,10 +37,10 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
